Error fixed but it shows in terminal